# simplex

./: AGENTS.md  Discussion.md  Readme.md  delaet-readme.md  dune-project  simplex.opam
.github/workflows/: ci.yml
bench/: .gitignore  README.md  compare.py  evaluate.py  gen_instances.py  oracle.py  pyproject.toml  run_bench.py  to_lp.py
bench/heldout/: assign_4.in  assign_5.in  assign_6.in  assign_7.in  degen_10.in  degen_14.in  degen_6.in  match_10x8.in  match_6x6.in  match_8x5.in  rand_12x20.in  rand_16x30.in  rand_20x40.in  rand_25x60.in  rand_5x5.in  rand_8x12.in
bench/train/: assign_4.in  assign_5.in  assign_6.in  assign_7.in  degen_10.in  degen_14.in  degen_6.in  kleeminty_4.in  kleeminty_5.in  kleeminty_6.in  match_10x8.in  match_6x6.in  match_8x5.in  rand_12x20.in  rand_16x30.in  rand_20x40.in  rand_25x60.in  rand_5x5.in  rand_8x12.in
delaet-src/: delaet-simplex.ml  lexer.mll  macro.ml  tableau.ml
delaet-tests/: delaet-gen_graph.py  delaet-gen_mean.py  delaet-get_complex.py
delaet-tests/delaet-1-exercices/: delaet-lumberjack.dat.out  delaet-student.in
delaet-tests/delaet-4-random-small/: delaet-test00.txt.out  delaet-test03.txt.out  delaet-test04.txt  delaet-test07.txt  delaet-test09.txt  delaet-test10.txt.out  delaet-test11.txt  delaet-test12.txt  delaet-test12.txt.out  delaet-test13.txt.out  delaet-test14.txt.out  delaet-test15.txt.out  delaet-test16.txt.out  delaet-test18.txt.out  delaet-test19.txt.out  delaet-test20.txt.out  delaet-test22.txt  delaet-test23.txt.out  delaet-test24.txt.out  (+68 more)
lib/: Makefile  README.md  lexer.mll  params.ml  parser.mly  tableau.ml  tableau.mli
solver/: dune  macro.ml  params.ml  tableau.ml  tableau.mli  util.ml
test/: delaet-gen_random.py  dune  gen_random.py
(+260 files in other folders)
